// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileSelectorDialog attack profile matches the snapshot 1`] = `
<div>
  <div
    aria-hidden="true"
    aria-labelledby="attackProfileSelectorModalLabel"
    class="modal fade"
    id="attackProfileSelector"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="{props.id + ModalLabel}"
          >
            Attack
             
            profile
          </h5>
          <button
            aria-label="Close"
            class="close"
            data-dismiss="modal"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          class="modal-body"
        >
          <div
            class="container"
          >
            <div
              class="row justify-content-center my-2"
            >
              <div
                class="btn-group btn-group-toggle"
                data-toggle="buttons"
              >
                <label
                  class="btn btn-light faction-label active"
                  title="Rebel"
                >
                  <input
                    autocomplete="off"
                    checked=""
                    id="rebel"
                    name="faction"
                    type="radio"
                    value="rebel"
                  />
                  <img
                    class="rebel-faction-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light faction-label"
                  title="Empire"
                >
                  <input
                    autocomplete="off"
                    id="empire"
                    name="faction"
                    type="radio"
                    value="empire"
                  />
                  <img
                    class="empire-faction-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light faction-label"
                  title="Republic"
                >
                  <input
                    autocomplete="off"
                    id="republic"
                    name="faction"
                    type="radio"
                    value="republic"
                  />
                  <img
                    class="republic-faction-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light faction-label"
                  title="Separatist"
                >
                  <input
                    autocomplete="off"
                    id="separatist"
                    name="faction"
                    type="radio"
                    value="separatist"
                  />
                  <img
                    class="separatist-faction-img mx-1"
                  />
                </label>
              </div>
            </div>
            <div
              class="row justify-content-center my-2"
            >
              <div
                class="btn-group btn-group-toggle"
                data-toggle="buttons"
              >
                <label
                  class="btn btn-light rank-label active"
                  title="Commander"
                >
                  <input
                    autocomplete="off"
                    checked=""
                    id="commander"
                    name="rank"
                    type="radio"
                    value="commander"
                  />
                  <img
                    class="commander-rank-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light rank-label"
                  title="Operative"
                >
                  <input
                    autocomplete="off"
                    id="operative"
                    name="rank"
                    type="radio"
                    value="operative"
                  />
                  <img
                    class="operative-rank-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light rank-label"
                  title="Corps"
                >
                  <input
                    autocomplete="off"
                    id="corps"
                    name="rank"
                    type="radio"
                    value="corps"
                  />
                  <img
                    class="corps-rank-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light rank-label"
                  title="Special Forces"
                >
                  <input
                    autocomplete="off"
                    id="specialForces"
                    name="rank"
                    type="radio"
                    value="specialForces"
                  />
                  <img
                    class="specialforces-rank-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light rank-label"
                  title="Support"
                >
                  <input
                    autocomplete="off"
                    id="support"
                    name="rank"
                    type="radio"
                    value="support"
                  />
                  <img
                    class="support-rank-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light rank-label"
                  title="Heavy"
                >
                  <input
                    autocomplete="off"
                    id="heavy"
                    name="rank"
                    type="radio"
                    value="heavy"
                  />
                  <img
                    class="heavy-rank-img mx-1"
                  />
                </label>
              </div>
            </div>
            <div
              class="row justify-content-center my-2"
            >
              <div>
                <div
                  class="d-flex mx-auto"
                >
                  <select
                    aria-label="Unit name"
                    class="rounded px-2 mx-auto"
                    id="attackProfileSelector-unit-nameSelect"
                  >
                    <option
                      value="Cassian Andor"
                    >
                      Cassian Andor
                    </option>
                    <option
                      value="Han Solo"
                    >
                      Han Solo
                    </option>
                    <option
                      value="Jyn Erso"
                    >
                      Jyn Erso
                    </option>
                    <option
                      value="Lando Calrissian"
                    >
                      Lando Calrissian
                    </option>
                    <option
                      value="Leia Organa"
                    >
                      Leia Organa
                    </option>
                    <option
                      value="Luke Skywalker"
                    >
                      Luke Skywalker
                    </option>
                    <option
                      value="Rebel Officer"
                    >
                      Rebel Officer
                    </option>
                  </select>
                </div>
                <div
                  class="text-center mt-2 mx-auto"
                >
                  Capable Intelligence Agent
                </div>
              </div>
            </div>
            <div>
              <div
                class="row justify-content-center my-2"
              >
                <select
                  aria-label="Weapon 0"
                  class="rounded-lg px-2 ml-2"
                  id="attackProfileSelector-weapon-0-itemSelect"
                >
                  <option
                    value=""
                  />
                  <option
                    value="Advanced Combat Training"
                  >
                    Advanced Combat Training
                  </option>
                  <option
                    value="Cassian's Covert Blaster"
                  >
                    Cassian's Covert Blaster
                  </option>
                </select>
              </div>
            </div>
            <div
              class="row justify-content-center my-2"
            >
              <img
                class="gear-upgrade-img"
              />
              <select
                aria-label="Upgrade 0"
                class="rounded-lg px-2 ml-2"
                id="attackProfileSelector-0-upgrade-itemSelect"
              >
                <option
                  value=""
                />
                <option
                  value="Targeting Scopes"
                >
                  Targeting Scopes
                </option>
              </select>
            </div>
            <div
              class="row justify-content-center my-2"
            >
              <img
                class="armament-upgrade-img"
              />
              <select
                aria-label="Upgrade 1"
                class="rounded-lg px-2 ml-2"
                id="attackProfileSelector-1-upgrade-itemSelect"
              >
                <option
                  value=""
                />
                <option
                  value="A280-CFE Pistol Config"
                >
                  A280-CFE Pistol Config
                </option>
                <option
                  value="A280-CFE Sniper Config"
                >
                  A280-CFE Sniper Config
                </option>
              </select>
            </div>
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-dismiss="modal"
            id="attackProfileSelector-closeButton"
            type="button"
          >
            Cancel
          </button>
          <button
            class="btn btn-primary"
            id="attackProfileSelector-applyButton"
            type="button"
          >
            Apply
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProfileSelectorDialog defense profile matches the snapshot 1`] = `
<div>
  <div
    aria-hidden="true"
    aria-labelledby="defenseProfileSelectorModalLabel"
    class="modal fade"
    id="defenseProfileSelector"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="{props.id + ModalLabel}"
          >
            Defense
             
            profile
          </h5>
          <button
            aria-label="Close"
            class="close"
            data-dismiss="modal"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          class="modal-body"
        >
          <div
            class="container"
          >
            <div
              class="row justify-content-center my-2"
            >
              <div
                class="btn-group btn-group-toggle"
                data-toggle="buttons"
              >
                <label
                  class="btn btn-light faction-label active"
                  title="Rebel"
                >
                  <input
                    autocomplete="off"
                    checked=""
                    id="rebel"
                    name="faction"
                    type="radio"
                    value="rebel"
                  />
                  <img
                    class="rebel-faction-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light faction-label"
                  title="Empire"
                >
                  <input
                    autocomplete="off"
                    id="empire"
                    name="faction"
                    type="radio"
                    value="empire"
                  />
                  <img
                    class="empire-faction-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light faction-label"
                  title="Republic"
                >
                  <input
                    autocomplete="off"
                    id="republic"
                    name="faction"
                    type="radio"
                    value="republic"
                  />
                  <img
                    class="republic-faction-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light faction-label"
                  title="Separatist"
                >
                  <input
                    autocomplete="off"
                    id="separatist"
                    name="faction"
                    type="radio"
                    value="separatist"
                  />
                  <img
                    class="separatist-faction-img mx-1"
                  />
                </label>
              </div>
            </div>
            <div
              class="row justify-content-center my-2"
            >
              <div
                class="btn-group btn-group-toggle"
                data-toggle="buttons"
              >
                <label
                  class="btn btn-light rank-label active"
                  title="Commander"
                >
                  <input
                    autocomplete="off"
                    checked=""
                    id="commander"
                    name="rank"
                    type="radio"
                    value="commander"
                  />
                  <img
                    class="commander-rank-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light rank-label"
                  title="Operative"
                >
                  <input
                    autocomplete="off"
                    id="operative"
                    name="rank"
                    type="radio"
                    value="operative"
                  />
                  <img
                    class="operative-rank-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light rank-label"
                  title="Corps"
                >
                  <input
                    autocomplete="off"
                    id="corps"
                    name="rank"
                    type="radio"
                    value="corps"
                  />
                  <img
                    class="corps-rank-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light rank-label"
                  title="Special Forces"
                >
                  <input
                    autocomplete="off"
                    id="specialForces"
                    name="rank"
                    type="radio"
                    value="specialForces"
                  />
                  <img
                    class="specialforces-rank-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light rank-label"
                  title="Support"
                >
                  <input
                    autocomplete="off"
                    id="support"
                    name="rank"
                    type="radio"
                    value="support"
                  />
                  <img
                    class="support-rank-img mx-1"
                  />
                </label>
                <label
                  class="btn btn-light rank-label"
                  title="Heavy"
                >
                  <input
                    autocomplete="off"
                    id="heavy"
                    name="rank"
                    type="radio"
                    value="heavy"
                  />
                  <img
                    class="heavy-rank-img mx-1"
                  />
                </label>
              </div>
            </div>
            <div
              class="row justify-content-center my-2"
            >
              <div>
                <div
                  class="d-flex mx-auto"
                >
                  <select
                    aria-label="Unit name"
                    class="rounded px-2 mx-auto"
                    id="defenseProfileSelector-unit-nameSelect"
                  >
                    <option
                      value="Cassian Andor"
                    >
                      Cassian Andor
                    </option>
                    <option
                      value="Han Solo"
                    >
                      Han Solo
                    </option>
                    <option
                      value="Jyn Erso"
                    >
                      Jyn Erso
                    </option>
                    <option
                      value="Lando Calrissian"
                    >
                      Lando Calrissian
                    </option>
                    <option
                      value="Leia Organa"
                    >
                      Leia Organa
                    </option>
                    <option
                      value="Luke Skywalker"
                    >
                      Luke Skywalker
                    </option>
                    <option
                      value="Rebel Officer"
                    >
                      Rebel Officer
                    </option>
                  </select>
                </div>
                <div
                  class="text-center mt-2 mx-auto"
                >
                  Capable Intelligence Agent
                </div>
              </div>
            </div>
            <div
              class="row justify-content-center my-2"
            >
              <img
                class="training-upgrade-img"
              />
              <select
                aria-label="Upgrade 0"
                class="rounded-lg px-2 ml-2"
                id="defenseProfileSelector-0-upgrade-itemSelect"
              >
                <option
                  value=""
                />
                <option
                  value="Duck and Cover"
                >
                  Duck and Cover
                </option>
                <option
                  value="Situational Awareness"
                >
                  Situational Awareness
                </option>
              </select>
            </div>
            <div
              class="row justify-content-center my-2"
            >
              <img
                class="training-upgrade-img"
              />
              <select
                aria-label="Upgrade 1"
                class="rounded-lg px-2 ml-2"
                id="defenseProfileSelector-1-upgrade-itemSelect"
              >
                <option
                  value=""
                />
                <option
                  value="Duck and Cover"
                >
                  Duck and Cover
                </option>
                <option
                  value="Situational Awareness"
                >
                  Situational Awareness
                </option>
              </select>
            </div>
          </div>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-dismiss="modal"
            id="defenseProfileSelector-closeButton"
            type="button"
          >
            Cancel
          </button>
          <button
            class="btn btn-primary"
            id="defenseProfileSelector-applyButton"
            type="button"
          >
            Apply
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
